--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<h1>Peccaviens</h1>
-<p>"Peccaviens"</p>
-<p>What could it mean?</p>
-<p>Is it a curse?</p>
-<p>Possibly...</p>
-<p>But what does it do?</p>
-<p>...</p>
-<p>Just wait...</p>
+<h1 align="right">Peccaviens</h1>
+<p align="right">"Peccaviens"</p>
+<p align="right">What could it mean?</p>
+<p align="right">Is it a curse?</p>
+<p align="right">Possibly...</p>
+<p align="right">But what does it do?</p>
+<p align="right">...</p>
+<p align="right">Just wait...</p>
