--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<h1 align="right">Peccaviens</h1>
-<p align="right">"Peccaviens"</p>
-<p align="right">What could it mean?</p>
-<p align="right">Is it a curse?</p>
-<p align="right">Possibly...</p>
-<p align="right">But what does it do?</p>
-<p align="right">...</p>
-<p align="right">Just wait...</p>
+<h1 align="center">Peccaviens</h1>
+<p align="center">"Peccaviens"</p>
+<p align="center">What could it mean?</p>
+<p align="center">Is it a curse?</p>
+<p align="center">Possibly...</p>
+<p align="center">But what does it do?</p>
+<p align="center">...</p>
+<p align="center">Just wait...</p>
