--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
-<h1 align="center">Peccaviens</h1>
-<p align="center">"Peccaviens"</p>
-<p align="center">What could it mean?</p>
-<p align="center">Is it a curse?</p>
-<p align="center">Possibly...</p>
-<p align="center">But what does it do?</p>
-<p align="center">...</p>
-<p align="center">Just wait...</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>New webpage</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+        <style>body {
+  background-color: black;
+}
+
+a {
+  text-align: center;
+  font-family: "Comfortaa", sans-serif;
+  font-weight: 42;
+  font-style: normal;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}</style>
+    </head>
+    <body>
+<a href="https://peccaviens.github.io">...</a>
+    </body>
+</html>
